Renaming to use OtherJvm prefix